fix(lib): nested viewMode templateRef on single click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -241,7 +241,8 @@
             (cancel)="cancel(index, 'isActive')"
           >
             <ng-template viewMode>
-              {{ account.isActive }}
+              <!-- nested value for testing purposes -->
+              <span>{{ account.isActive }}</span>
             </ng-template>
             <ng-template editMode>
               <input placeholder="isActive" type="checkbox" [formControl]="getControl(index, 'isActive')" />
